Clean up code, no functional changes
git-svn-id: svn://svn.opentaps.org/opentaps_all/versions/1.4/trunk@14009 d3523486-f5fe-0310-a41a-a15a4e76f3c7